ENV variable icon fix on container details

--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -206,7 +206,7 @@
             <div class="panel panel-warning">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <span class="fa fa-plug"> </span>
+                        <span class="fa fa-info"> </span>
                         Environment variables
                     </h3>
                 </div>
