Adding container listing to image details

--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -213,5 +213,5 @@
         </tr>
         </tbody>
     </table>
-    <span class="fa fa-exclamation-triangle" style="color: red"></span> - privileged
+    <span class="fa fa-exclamation-triangle" style="color: red"></span> = privileged
 </div>
