Adding skeleton of image pull as individual menupoint

--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -1,7 +1,5 @@
 <div class="col-md-12">
 
-    <div>
-    </div>
     <form class="form-inline" role="form">
         <div class="form-group">
             <input type="text" class="form-control" id="newHostName" ng-model="newHostName" placeholder="name">
@@ -18,6 +16,7 @@
     </form>
     <div class="table-responsive">
         <table class="table table-condensed table-hover table-striped table-bordered">
+            <thead>
             <tr class="success">
                 <td colspan="8">
                     <div class="input-group col-md-3">
@@ -33,6 +32,7 @@
                     </div>
                 </td>
             </tr>
+
             <tr>
                 <td width="1%" class="text-center"><strong>Status</strong></td>
                 <td width="15%" class="text-center"><strong>Name</strong></td>
@@ -42,6 +42,8 @@
                 <td width="1%" class="text-center"><strong>Actions</strong></td>
                 <td width="1%" class="text-center"><strong>Default</strong></td>
             </tr>
+            </thead>
+            <tbody>
             <tr ng-repeat="host in hosts  | orderBy: '[!status, name]'">
                 <!--<tr ng-repeat="host in hosts track by $index | orderBy: '[!status, name]'">-->
                 <td width="1%" class="text-left">
@@ -90,7 +92,7 @@
                           aria-hidden="true"></span>
                 </td>
             </tr>
-
+            </tbody>
         </table>
     </div>
 </div>
