--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a class="active" href="#/hosts"><span class="fa fa-server"></span> Hosts</a></li>
                     <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
                     <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
+                    <li><a href="#/repository"><span class="fa fa-cloud-download"></span> Repository</a></li>
                 </ul>
                 <!--<ul class="nav navbar-nav pull-right">-->
                     <!--<li><a href="#">Help</a></li>-->
@@ -64,11 +65,12 @@
 <script src="app/shared/services.js"></script>
 <!---->
 <script src="app/hosts/hosts.js"></script>
-<script src="app/createContainer/createContainer.js"></script>
 <script src="app/hostDetails/hostDetails.js"></script>
 <script src="app/containers/containers.js"></script>
 <script src="app/containerDetails/containerDetails.js"></script>
+<script src="app/createContainer/createContainer.js"></script>
 <script src="app/images/images.js"></script>
 <script src="app/imageDetails/imageDetails.js"></script>
+<script src="app/repository/repository.js"></script>
 </body>
 </html>
