Adding oboe framework for streaming data

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     <li><a class="active" href="#/hosts"><span class="fa fa-server"></span> Hosts</a></li>
                     <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
                     <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
-                    <li><a href="#/repository"><span class="fa fa-cloud-download"></span> Repository</a></li>
+                    <li><a href="#/repository"><span class="fa fa-cloud"></span> Repository</a></li>
                 </ul>
                 <!--<ul class="nav navbar-nav pull-right">-->
-                    <!--<li><a href="#">Help</a></li>-->
+                <!--<li><a href="#">Help</a></li>-->
                 <!--</ul>-->
             </div>
         </nav>
@@ -59,6 +59,7 @@
 <script src="assets/libs/angular-resource/angular-resource.js"></script>
 <script src="assets/libs/json-formatter/dist/json-formatter.js"></script>
 <script src="assets/libs/xterm.js/src/xterm.js"></script>
+<script src="assets/libs/oboe/dist/oboe-browser.js"></script>
 <!---->
 <script src="app/app.modules.js"></script>
 <script src="app/app.filters.js"></script>
