--- a/app/repository/repository.html
+++ b/app/repository/repository.html
@@ -1,23 +1,41 @@
 <div class="col-md-12 pull-right">
     <div class="row">
         <div class="col-md-12">
-            <h3>Search/Pull images</h3>
+            <h3>Search/Pull images - totally boilerplate, don't use it pls</h3>
         </div>
     </div>
     <hr/>
+    <div class="alert alert-info" role="alert" ng-show="repositorySearching">
+        <h3 class="panel-title"><span class="fa fa-refresh fa-spin"></span> Searching for <strong>{{searchText}}</strong></h3>
+    </div>
+    <div class="alert alert-danger" role="alert" ng-show="repositorySearchingError">
+        <h3 class="panel-title"><span class="fa fa-frown-o"></span> Error occured during searching for <strong>{{searchImageName}}</strong></h3>
+
+        <div class="panel-body">
+            <div class="col-md-1 text-right"><strong>Message:</strong></div>
+            <div class="col-md-11">{{error.data}}</div>
+            <div class="col-md-1 text-right"><strong>Status:</strong></div>
+            <div class="col-md-11">{{error.status}} / {{error.statusText}}</div>
+        </div>
+    </div>
     <table class="table table-condensed table-hover table-striped table-bordered">
         <thead>
         <tr class="success">
             <td colspan="8">
                 <div class="input-group col-md-3">
                     <label class="sr-only" for="search"></label>
-                    <input type="text" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" id="search"
-                           style="width: 100% !important;margin-top: 2px" ng-model='searchImageName' placeholder="Type image name here">
+                    <input type="text" class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required " id="search"
+                           style="width: 100% !important;margin-top: 2px" ng-model='searchImageName' placeholder="Type image name here"
+                           ng-enter="searchImage()">
                             <span class="input-group-btn">
                         </span>
                     <button type="button" class="btn btn-success form-control" ng-click="searchImage()"><span
                             class="fa fa-search"></span><strong>
                         Search</strong>
+                    </button>
+                    <button type="button" class="btn btn-success form-control" ng-click="downloadImage('lexandro/echo-repeat')"><span
+                            class="fa fa-cloud-download"></span><strong>
+                        Pull echo-repeat</strong>
                     </button>
 
                 </div>
@@ -42,20 +60,26 @@
         <tbody>
 
 
-        <tr ng-repeat="searchResult in searchResults">
+        <tr ng-repeat="searchResult in searchResults" ng-class="{'success': searchResult.is_official}">
             <td class="text-center vcenter">
                 <span class="vcenter" ng-class="{'glyphicon glyphicon-check':selectAllImagesFlag, 'glyphicon glyphicon-unchecked':!selectAllImagesFlag}"
                       ng-click="switchSelectAllImagesFlag()">
                 </span>
             </td>
-            <td>{{searchResult.name}}</td>
-            <td>{{searchResult.is_official}}</td>
-            <td>{{searchResult.is_trusted}}</td>
-            <td>{{searchResult.is_automated}}</td>
-            <td>{{searchResult.star_count}}</td>
-            <td style="max-width: 500px;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{searchResult.description}}</td>
-            <td>DL</td>
-
+            <td><strong>{{searchResult.name}}</strong></td>
+            <td class="text-center"><span class="fa fa-check" ng-show="searchResult.is_official"></span>&nbsp;</td>
+            <td class="text-center"><span class="fa fa-check" ng-show="searchResult.is_trusted"></span>&nbsp;</td>
+            <td class="text-center"><span class="fa fa-check" ng-show="searchResult.is_automated"></span>&nbsp;</td>
+            <td class="text-center"><strong>{{searchResult.star_count}}</strong></td>
+            <td style="max-width: 500px;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" data-toggle="tooltip"
+                ng-attr-title="{{searchResult.description}}">{{searchResult.description}}
+            </td>
+            <td>
+                <button type="button" class="btn btn-success form-control" ng-click="downloadImage(searchResult.name)"><span
+                        class="fa fa-cloud-download"></span><strong>
+                    Pull</strong>
+                </button>
+            </td>
         </tr>
         </tbody>
     </table>
