Adding toastr to show toast messages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
     <link rel='stylesheet' href='assets/libs/font-awesome/css/font-awesome.min.css'>
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
-    <link rel="stylesheet" href="assets/libs/xterm.js/src/xterm.css">
+    <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
+    <link rel="stylesheet" href="assets/libs/toastr/toastr.min.css">
     <link rel='stylesheet' href='assets/css/custom.css'>
     <link rel='stylesheet' href='assets/css/angular-csp.css'>
     <link rel='stylesheet' href='assets/libs/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css'>
@@ -60,6 +61,7 @@
 <script src="assets/libs/json-formatter/dist/json-formatter.js"></script>
 <script src="assets/libs/xterm.js/src/xterm.js"></script>
 <script src="assets/libs/oboe/dist/oboe-browser.js"></script>
+<script src="assets/libs/toastr/toastr.min.js"></script>
 <!---->
 <script src="app/app.modules.js"></script>
 <script src="app/app.filters.js"></script>
