Enabling new modules (invisibly...)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/hostDetails"><span class="fa fa-desktop"></span> {{$root.appName}}</a>
+                <a class="navbar-brand" href="#/about"><span class="fa fa-desktop"></span> {{$root.appName}}</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -34,6 +34,9 @@
                     <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
                     <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
                     <li><a href="#/repository"><span class="fa fa-cloud"></span> Repository</a></li>
+                    <li><a href="#/tasks"><span class="fa fa-heartbeat"></span> Tasks</a></li>
+                    <!--<li><a href="#/events"><span class="fa fa-history"></span> Events</a></li>-->
+                    <!--<li><a href="#/hostDetails"><span class="fa fa-laptop"></span> Host details</a></li>-->
                 </ul>
                 <!--<ul class="nav navbar-nav pull-right">-->
                 <!--<li><a href="#">Help</a></li>-->
@@ -75,5 +78,8 @@
 <script src="app/images/images.js"></script>
 <script src="app/imageDetails/imageDetails.js"></script>
 <script src="app/repository/repository.js"></script>
+<script src="app/tasks/tasks.js"></script>
+<script src="app/events/events.js"></script>
+<script src="app/about/about.js"></script>
 </body>
 </html>
