Adding about message :)

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -5,5 +5,5 @@
         </div>
     </div>
     <hr/>
-    Under construction. Come back later...
+    Under construction. Come back later... Btw an about page is not so interesting thing isn't?
 </div>
