--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#/repository"><span class="fa fa-cloud"></span> Repository</a></li>
                     <li><a href="#/tasks"><span class="fa fa-heartbeat"></span> Tasks</a></li>
                     <!--<li><a href="#/events"><span class="fa fa-history"></span> Events</a></li>-->
-                    <!--<li><a href="#/hostDetails"><span class="fa fa-laptop"></span> Host details</a></li>-->
+                    <li><a href="#/hostDetails"><span class="fa fa-laptop"></span> Host details</a></li>
                 </ul>
                 <!--<ul class="nav navbar-nav pull-right">-->
                 <!--<li><a href="#">Help</a></li>-->
