Adding optional scrolling for the app window in chrome mode

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,9 +1,19 @@
-<div class="col-md-12 pull-right">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>About</h3>
-        </div>
+<class="col-md-12 pull-right">
+<div class="row">
+    <div class="col-md-12">
+        <h3>About</h3>
     </div>
-    <hr/>
-    Under construction. Come back later... Btw an about page is not so interesting thing isn't?
+</div>
+<hr/>
+<h5>Under construction. Come back later... Btw an about page is not so interesting thing isn't?</h5><br/>
+Dockery is a Docker host management and monitoring application with full container lifecycle support<br/>
+
+Developer: Robert Stern (lexandro2000@(google's mail provider).com<br/>
+Twitter: <a href="https://twitter.com/lexandro">lexandro</a><br/>
+GitHub source: <a href="https://github.com/lexandro/dockery">dockery repo</a><br/>
+Reporting issues: <a href="https://github.com/lexandro/dockery/issues">dockery issues</a><br/>
+Wiki: <a href="https://github.com/lexandro/dockery/wiki">dockery wiki</a><br/>
+Version: {{appVersion}}<br/>
+<br/>
+<small>Mehh... I need someone who could write a cool about text for this app...</small>
 </div>
