--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/about"><span class="fa fa-desktop"></span> {{$root.appName}}</a>
+                <a class="navbar-brand" href="#/about"><span class="fa fa-desktop"></span> {{$root.appName}} <small>{{appVersion}}</small></a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
