--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -91,7 +91,8 @@
                 <div class="col-md-3 text-right"><strong>Started</strong></div>
                 <div class="col-md-9">{{containerDetails.State.StartedAt| date:'medium'}}&nbsp;</div>
                 <div class="col-md-3 text-right"><strong>Finished</strong></div>
-                <div class="col-md-9">{{containerDetails.State.Running==true?"No":containerDetails.State.FinishedAt| date:'medium'}}&nbsp;</div>
+                <div class="col-md-9">{{containerDetails.State.Running==true?"No":containerDetails.State.FinishedAt|
+                    date:'medium'}}&nbsp;</div>
                 <div class="col-md-3 text-right"><strong>Working dir</strong></div>
                 <div class="col-md-9">{{containerDetails.Config.WorkingDir}}&nbsp;</div>
                 <div class="col-md-3 text-right"><strong>Command</strong></div>
@@ -172,6 +173,36 @@
             <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span>
                 {{containerDetailsLoadingMessage}}</h3>
         </div>
+        <div class="col-md-12">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        <span class="fa fa-folder-open"></span>
+                        Volumes
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-condensed table-hover table-striped"
+                           ng-show="!isEmpty(containerDetails.Volumes)">
+                        <thead>
+                        <tr>
+                            <th>Host</th>
+                            <th>Container</th>
+                            <th class="text-center">Writeable</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="(key,value) in containerDetails.Volumes">
+                            <td>{{value}}</td>
+                            <td>{{key}}</td>
+                            <td class="text-center">{{containerDetails.VolumesRW[key]==true?'yes':'no'}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
         <div class="col-md-4">
             <div class="panel panel-info">
                 <div class="panel-heading">
@@ -222,36 +253,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
-            <div class="panel panel-success">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        <span class="fa fa-folder-open"></span>
-                        Volumes
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    <table class="table table-condensed table-hover table-striped"
-                           ng-show="!isEmpty(containerDetails.Volumes)">
-                        <thead>
-                        <tr>
-                            <th>Host</th>
-                            <th>Container</th>
-                            <th class="text-center">Writeable</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="(key,value) in containerDetails.Volumes">
-                            <td>{{value}}</td>
-                            <td>{{key}}</td>
-                            <td class="text-center">{{containerDetails.VolumesRW[key]==true?'yes':'no'}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
 
-        </div>
     </div>
 
     <div ng-show="activeTab=='top'" class="col-md-12">
