--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/about"><span class="fa fa-desktop"></span> {{$root.appName}} <small>{{appVersion}}</small></a>
+                <a class="navbar-brand" href="#/about"><span class="fa fa-desktop"></span> {{$root.appName}}
+                    <small>{{appVersion}}</small>
+                </a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -34,7 +36,8 @@
                     <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
                     <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
                     <li><a href="#/repository"><span class="fa fa-cloud"></span> Repository</a></li>
-                    <li><a href="#/tasks"><span class="fa fa-heartbeat"></span> Tasks</a></li>
+                    <li><a href="#/tasks" style="color: red" ng-show="$root.taskInProgress"><span class="fa fa-heartbeat"></span> Tasks</a></li>
+                    <li><a href="#/tasks" ng-show="!$root.taskInProgress"><span class=" fa fa-heartbeat"></span> Tasks</a></li>
                     <!--<li><a href="#/events"><span class="fa fa-history"></span> Events</a></li>-->
                     <li><a href="#/hostDetails"><span class="fa fa-laptop"></span> Host details</a></li>
                 </ul>
