--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -88,7 +88,7 @@
             </td>
             <td width="7%" class="text-center" ng-click="changeSorting('Id')">
                 <div class="vcenter">
-                    <strong>ID</strong>
+                    <strong>Container ID</strong>
                     <span class='fa'
                           ng-class="{'fa-sort-amount-desc ':sort.column=='Id' && sort.direction==='descending','fa-sort-amount-asc':sort.column=='Id' && sort.direction==='ascending'}">
                     </span>
