--- a/app/tasks/tasks.html
+++ b/app/tasks/tasks.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <hr/>
-    <table class="table table-condensed table-hover table-striped">
+    <table class="table table-condensed table-hover table-striped table-bordered">
         <thead>
         <tr class="success vcenter form-group">
             <td colspan="5">
