--- a/app/repository/repository.html
+++ b/app/repository/repository.html
@@ -36,10 +36,10 @@
                         class="fa fa-cloud-download"></span><strong>
                     Pull selected</strong>
                 </button>
-                <button type="button" class="btn btn-danger btn-sm" ng-click="downloadImage('lexandro/echo-repeat')"><span
-                        class="fa fa-cloud-download"></span><strong>
-                    Pull echo-repeat</strong>
-                </button>
+                <!--<button type="button" class="btn btn-danger btn-sm" ng-click="downloadImage('lexandro/echo-repeat')"><span-->
+                <!--class="fa fa-cloud-download"></span><strong>-->
+                <!--Pull echo-repeat</strong>-->
+                <!--</button>-->
             </td>
         </tr>
 
